<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.eosr14.fontsimulator.ui.main.FontType" />

        <variable
            name="viewModel"
            type="com.eosr14.fontsimulator.ui.main.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_main_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_font_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_main_input">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_font_size_title"
                    style="@style/ResultTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/font_size_change_title(viewModel.currentFontSize)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Font Size 16 SP" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekBar_font_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:max="100"
                    android:onProgressChanged="@{(seekBar, progress, fromUser) -> viewModel.changeFontSize(progress)}"
                    android:progress="@{viewModel.currentFontSize}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_font_size_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_spacing_line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_font_size">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_spacing_line_title"
                    style="@style/ResultTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/line_spacing_change_title(viewModel.currentLineSpacing)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Font Size 16 SP" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekBar_line_spacing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:max="100"
                    android:onProgressChanged="@{(seekBar, progress, fromUser) -> viewModel.changeLineSpacing(progress)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_spacing_line_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_spacing_letter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_spacing_line">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_spacing_letter_title"
                    style="@style/ResultTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/letter_spacing_change_title(viewModel.currentLetterSpacing)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Font Size 16 SP" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekBar_letter_spacing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:max="200"
                    android:onProgressChanged="@{(seekBar, progress, fromUser) -> viewModel.changeLetterSpacing(progress)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_spacing_letter_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_select_font_title"
                style="@style/ResultTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/font_select_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_spacing_letter" />

            <RadioGroup
                android:id="@+id/rg_select_font"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_select_font_title">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.currentFont.equals(FontType.REGULAR)}"
                    android:onClick="@{() -> viewModel.onFontRadioButtonClick(FontType.REGULAR)}"
                    android:text="@string/regular" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:checked="@{viewModel.currentFont.equals(FontType.MEDIUM)}"
                    android:onClick="@{() -> viewModel.onFontRadioButtonClick(FontType.MEDIUM)}"
                    android:text="@string/medium" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.currentFont.equals(FontType.BOLD)}"
                    android:onClick="@{() -> viewModel.onFontRadioButtonClick(FontType.BOLD)}"
                    android:text="@string/bold" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result_default_title"
                style="@style/ResultTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/default_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_select_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                android:lineSpacingExtra="0dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_result_default_title"
                tools:text="디폴트 값" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result_letter_spacing_title"
                style="@style/ResultTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/letter_spacing_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_result_default" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result_letter_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                android:lineSpacingExtra="0dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_result_letter_spacing_title"
                tools:text="디폴트 값" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result_default_three_title"
                style="@style/ResultTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/default_three_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_result_letter_spacing" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result_default_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                android:lineSpacingExtra="0dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_result_default_three_title"
                tools:text="디폴트 값" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result_line_spacing_title"
                style="@style/ResultTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/line_spacing_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_result_default_three" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_result_line_spacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                android:lineSpacingExtra="0dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_result_line_spacing_title"
                tools:text="디폴트 값" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
